--- a/setup/style.css
+++ b/setup/style.css
@@ -12,7 +12,9 @@ body {
 .sidebar {
   background: #ffffff;
   margin: 15px;
-  width: 340px;
+  width: 200px;
+  height: 50px;
+  float: left;
 }
 
 .preview {
@@ -87,12 +89,14 @@ input[type="radio"] {
 }
 
 #wrapper {
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
+  margin-left: 400px;
+  margin-top: -950px;
 }
 .post {
-  width: 20%;
-  height: 400px;
+  width: 40%;
+  height: 500px;
   border: 0.5px solid #dadaf7;
   margin: 5px 5px;
   padding: 15px;
@@ -121,7 +125,7 @@ input[type="radio"] {
   margin: 0;
   position: relative;
   top: -40px;
-  left: 20%;
+  left: 11%;
 }
 
 .ig_logo {
@@ -162,5 +166,5 @@ input[type="radio"] {
   text-decoration: none;
   font-size: 16px;
   float: right;
-  margin-right: 50%;
+  margin-right: 42.5%;
 }
